--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,15 @@
- {
+{
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "destination": "/"
+      "dest": "index.js"
     }
   ]
 }
