--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pdfkit": "^0.16.0"
   }
 }
